--- a/Final/app/src/main/res/layout/activity_main.xml
+++ b/Final/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#b5b5b5"
     tools:context=".MainActivity">
 
-    <ListView
-        android:id="@+id/item_listView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#f0f0f0"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:scrollbars="none" />
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="220dp"
+        tools:layout_editor_absoluteY="312dp">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="15dp"
-        android:elevation="6dp"
-        android:src="@drawable/ic_baseline_add_24"
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="150dp"
+            android:gravity="center"
+            android:text="@string/chooseActivity"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-        app:backgroundTint="#B5B5B5"
-        app:pressedTranslationZ="12dp" />
+        <Button
+            android:id="@+id/toDoButton"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:text="@string/todoApp"
+            app:backgroundTint="@color/pink" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <Button
+            android:id="@+id/gameButton"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:text="@string/game"
+            app:backgroundTint="@color/pink" />
+
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
