--- a/Final/app/src/main/res/values/colors.xml
+++ b/Final/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#efefef</color>
     <color name="pink">#E91E63</color>
+    <color name="colorPrimary">#3991aa</color>
+    <color name="colorPrimaryDark">#184b5a</color>
+    <color name="colorBackground">#26697c</color>
+    <color name="colorAccent">#0A3664</color>
 </resources>
